# Robotics

./: README.md  format.sh  main.py  pyproject.toml  requirements.txt
project1/: README.md  main.py  pyproject.toml
project1/project1/: backward.py  forward.py
robotics/: utils.py
robotics/kinematics/: __init__.py  backward.py  forward.py
robotics/move/: __init__.py  cartesian.py  joint.py  planning.py
robotics/planning/: cartesian.py
